--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <!-- script -->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="script.js"></script>
+  <!-- <script src="corstest.js"></script> -->
 </body>
 </html>
